tentative de fixer la position (et la visibilité) des images

--- a/hugo/themes/datacthemist/assets/style.scss
+++ b/hugo/themes/datacthemist/assets/style.scss
@@ -845,7 +845,7 @@ a {
 .panel-poste {
   padding: $spacer-large;
   img {
-    position: absolute;
+    // position: absolute;
     background: none none;
     left: -$spacer-large;
     top: -$spacer-large;
